fdo#44176 dmapper: fix import of titlepg top/bottom margin